# Telegram-iOS

./: .gitignore  .gitmodules  CLAUDE.md  Makefile.dylib  Random.txt  versions.json
.github/workflows/: build-dylib.yml  build.yml  main.yml
Telegram/: BUILD
Telegram/Share/en.lproj/: Localizable.strings
Telegram/Telegram-iOS/: Config-Fork.xcconfig  Info.plist  InfoBazel.plist
Telegram/Telegram-iOS/en.lproj/: InfoPlist.strings  Localizable.strings
Telegram/WidgetKitWidget/en.lproj/: Localizable.strings
build-system/: appcenter-configuration.json  appstore-configuration.json  ksign-configuration.json
build-system/Make/: Make.py
build-system/fake-codesigning/profiles/: BroadcastUpload.mobileprovision  Intents.mobileprovision  NotificationContent.mobileprovision  NotificationService.mobileprovision  Share.mobileprovision  Telegram.mobileprovision  WatchApp.mobileprovision  WatchExtension.mobileprovision  Widget.mobileprovision
build-system/local-xcode/: BUILD.bazel
docs/: instantpage-richtext.md  richtext-composer.md
docs/superpowers/plans/: 2026-07-02-pull-quote.md  2026-07-07-richtext-table-structural-menu-externalization.md  2026-07-10-richtext-table-header-phase1.md
scripts/: build_dylib.sh
submodules/BrowserUI/: BUILD
submodules/ChatListUI/: BUILD
submodules/GalleryUI/: BUILD
submodules/InstantPageUI/: BUILD
submodules/MosaicLayout/: Package.swift
submodules/TelegramStringFormatting/: BUILD
submodules/TelegramUI/: BUILD
submodules/TextFormat/: BUILD
submodules/TgVoipWebrtc/: BUILD
tools/: ReynardGramDebug.m
(+912 files in other folders)
