load("@build_bazel_apple_support//xcode:xcode_config.bzl", "xcode_config")
load("@build_bazel_apple_support//xcode:xcode_version.bzl", "xcode_version")

xcode_version(
    name = "xcode_26_5",
    aliases = [
        "26.5",
        "17F42",
    ],
    default_ios_sdk_version = "26.5",
    default_macos_sdk_version = "26.5",
    default_tvos_sdk_version = "26.5",
    default_visionos_sdk_version = "26.5",
    default_watchos_sdk_version = "26.5",
    version = "26.5",
)

xcode_config(
    name = "xcode_config",
    default = ":xcode_26_5",
    versions = [":xcode_26_5"],
)
